--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "handlebars": "^4.7.7",
     "hbs": "^4.2.0",
     "nodemon": "^2.0.22",
     "sqlite-async": "^1.2.0"
